--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,3 +1,5 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Rubik+Doodle+Shadow&display=swap');
 *{
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
@@ -6,6 +8,12 @@
   height:100px;
   transform: skew(-20deg);
   box-shadow:5px 0 black;
+}
+.importedfont{
+  font-family: "Caveat", cursive;
+  font-optical-sizing: auto;
+  font-weight:normal;
+  font-style: normal;
 }
 
 
