--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -18,6 +18,18 @@
 .otp::-webkit-input-placeholder{
   text-align: center;
 }
+.backdrop{
+  position:fixed;
+  top: 0;
+  left:0;
+  width:100%;
+  height:100%;
+  background-color: rgba(0,0,0,0.5);
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1050;
+}
 /* Swiper Navigation Arrows */
 /* .swiper-button-prev, .swiper-button-next {
   color: rgb(213, 108, 108); 
